[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/04B_30__.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Components/UI/UI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 80
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.490196 )

[sub_resource type="DynamicFont" id=5]
size = 30
outline_color = Color( 0.803922, 0.0235294, 0.0235294, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 0.188235 )

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=8]
resource_name = "LevelFailed"
tracks/0/type = "value"
tracks/0/path = NodePath("UI/GameOver:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI/GameOver:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.233258, 1 ),
"update": 0,
"values": [ Vector2( 493.5, -500 ), Vector2( 493.5, 325 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "LevelStart"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("UI/LevelNumber:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.2, 2 ),
"transitions": PoolRealArray( 0.812253, 4.28709, 4.28709, 1 ),
"update": 0,
"values": [ Vector2( 379.163, -17.23 ), Vector2( 379.105, 288.466 ), Vector2( 379.105, 288.466 ), Vector2( 379.163, 525.254 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI/LevelNumber:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 1.6, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "WellDone"
tracks/0/type = "value"
tracks/0/path = NodePath("UI/WellDone:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI/WellDone:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 493.5, -500 ), Vector2( 439, 270.909 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("UI")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_timer"
} ]
}

[node name="CanvasLayer" type="CanvasLayer"]

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 57.1693
margin_top = 69.1958
margin_right = 57.1693
margin_bottom = 69.1958
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI"]
margin_left = -14.4861
margin_top = -32.1031
margin_right = 73.5139
margin_bottom = 4.89691
custom_fonts/font = SubResource( 1 )
text = "Moves: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelNumber" type="Label" parent="UI"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -260.837
margin_top = -417.23
margin_right = 224.163
margin_bottom = -224.23
custom_fonts/font = SubResource( 2 )
text = "LEVEL 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Panel" parent="UI"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -146.5
margin_top = -900.0
margin_right = 209.5
margin_bottom = -697.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/GameOver"]
margin_left = 1.0
margin_top = 27.0281
margin_right = 354.0
margin_bottom = 71.0281
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.733333, 0.203922, 0.203922, 1 )
text = "LEVEL FAILED!"
align = 1

[node name="RestartBtn" type="Button" parent="UI/GameOver"]
margin_left = 80.0
margin_top = 84.6731
margin_right = 263.0
margin_bottom = 127.673
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "Try again"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartBtn2" type="Button" parent="UI/GameOver"]
margin_left = 80.8972
margin_top = 138.636
margin_right = 263.897
margin_bottom = 179.636
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WellDone" type="Panel" parent="UI"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -146.5
margin_top = -900.0
margin_right = 209.5
margin_bottom = -697.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/WellDone"]
margin_left = 1.0
margin_top = 27.0281
margin_right = 354.0
margin_bottom = 71.0281
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.921569, 1, 0.00784314, 1 )
text = "WELL DONE!"
align = 1

[node name="NextBtn" type="Button" parent="UI/WellDone"]
margin_left = 49.0
margin_top = 85.0
margin_right = 301.0
margin_bottom = 128.0
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "Continue ... 1s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartBtn2" type="Button" parent="UI/WellDone"]
margin_left = 54.0
margin_top = 139.0
margin_right = 302.0
margin_bottom = 180.0
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="UI/WellDone"]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/LevelFailed = SubResource( 8 )
anims/LevelStart = SubResource( 3 )
anims/WellDone = SubResource( 9 )
[connection signal="pressed" from="UI/GameOver/RestartBtn" to="UI" method="_on_RestartBtn_pressed"]
[connection signal="pressed" from="UI/GameOver/RestartBtn2" to="UI" method="_on_RestartBtn2_pressed"]
[connection signal="pressed" from="UI/WellDone/NextBtn" to="UI" method="_on_NextBtn_pressed"]
[connection signal="pressed" from="UI/WellDone/RestartBtn2" to="UI" method="_on_RestartBtn2_pressed"]
[connection signal="timeout" from="UI/WellDone/Timer" to="UI" method="_on_Timer_timeout"]
